[gd_scene load_steps=19 format=3 uid="uid://h7pceacrhwep"]

[ext_resource type="Script" path="res://Scripts/PNJ/dummy.gd" id="1_vx45n"]
[ext_resource type="PackedScene" uid="uid://bc5ea8icchh2o" path="res://Scenes/weapon.tscn" id="2_ys2no"]
[ext_resource type="Texture2D" uid="uid://bryuv4osb7u11" path="res://Assets/PNJ/Dummy/dummy_spritesheet.png" id="3_vj1gv"]
[ext_resource type="Script" path="res://Scripts/PNJ/StateMachine.gd" id="5_tpvig"]
[ext_resource type="Script" path="res://Scripts/PNJ/DummyCombatMove.gd" id="6_ijmkv"]
[ext_resource type="Script" path="res://Scripts/PNJ/DummyAttack.gd" id="7_q56ib"]
[ext_resource type="Script" path="res://Scripts/PNJ/TouchedLabel.gd" id="7_r0wgd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hvijp"]
radius = 3.0
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f4qlj"]
atlas = ExtResource("3_vj1gv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8lbv"]
atlas = ExtResource("3_vj1gv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_68wyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4qlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8lbv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cu7di"]
atlas = ExtResource("3_vj1gv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg36n"]
atlas = ExtResource("3_vj1gv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc4kb"]
atlas = ExtResource("3_vj1gv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb0n6"]
atlas = ExtResource("3_vj1gv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfgbl"]
atlas = ExtResource("3_vj1gv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g41gw"]
atlas = ExtResource("3_vj1gv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhp8s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu7di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg36n")
}],
"loop": true,
"name": &"HighArm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc4kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb0n6")
}],
"loop": true,
"name": &"LowArm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfgbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g41gw")
}],
"loop": true,
"name": &"MediumArm",
"speed": 5.0
}]

[node name="Dummy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_vx45n")

[node name="DummyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_hvijp")

[node name="ColorRect" type="ColorRect" parent="DummyCollision"]
offset_left = -3.0
offset_top = -14.0
offset_right = 3.0
offset_bottom = 14.0
color = Color(1, 0, 1, 0.247059)

[node name="weapon" parent="." instance=ExtResource("2_ys2no")]
position = Vector2(3, -23)

[node name="DummySpriteComposition" type="Node2D" parent="."]

[node name="BodySprite" type="AnimatedSprite2D" parent="DummySpriteComposition"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_68wyd")

[node name="Arm" type="AnimatedSprite2D" parent="DummySpriteComposition"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_bhp8s")
animation = &"MediumArm"

[node name="TouchedLabel" type="Label" parent="."]
offset_left = -12.0
offset_top = -34.0
offset_right = 52.0
offset_bottom = -11.0
scale = Vector2(0.193293, 0.193293)
text = "touched"
script = ExtResource("7_r0wgd")

[node name="TouchedTimer" type="Timer" parent="TouchedLabel"]
wait_time = 1.5
one_shot = true

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_tpvig")
initial_state = NodePath("DummyCombatMove")

[node name="DummyCombatMove" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "character_collision", "body_sprite", "arm_sprite", "weapon")]
script = ExtResource("6_ijmkv")
character = NodePath("../..")
character_collision = NodePath("../../DummyCollision")
body_sprite = NodePath("../../DummySpriteComposition/BodySprite")
arm_sprite = NodePath("../../DummySpriteComposition/Arm")
weapon = NodePath("../../weapon")

[node name="DummyAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "character_collision", "body_sprite", "arm_sprite", "weapon")]
script = ExtResource("7_q56ib")
character = NodePath("../..")
character_collision = NodePath("../../DummyCollision")
body_sprite = NodePath("../../DummySpriteComposition/BodySprite")
arm_sprite = NodePath("../../DummySpriteComposition/Arm")
weapon = NodePath("../../weapon")

[connection signal="player_touched" from="weapon" to="." method="_on_weapon_player_touched"]
[connection signal="weapon_touched" from="weapon" to="." method="_on_weapon_weapon_touched"]
[connection signal="timeout" from="TouchedLabel/TouchedTimer" to="TouchedLabel" method="_on_touched_timer_timeout"]
